--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --text-size: 16px;
+    --sm-text-size: 14px
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,16 +14,24 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 20px;
 }
 .container {
     background-color: white;
+    position: relative;
     padding: 40px;
     margin: 20px;
     border-radius: 15px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    /* max-width: 600px; */
     text-align: center;
+}
+
+.container > img {
+    position: absolute;
+    left: 10px;
+    top: 0px;  
+    width: 90px;
+    height: 90px;
 }
 .heading {
     display: flex;
@@ -34,13 +46,15 @@ body {
 }
 .input-group {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     padding-bottom: 15px;
     border-bottom: 1px solid #ddd;
 }
 .get-input {
     padding: 15px;
-    font-size: 16px;
+    font-size: var(--text-size);
     border: 2px solid #ddd;
     border-radius: 8px;
     transition: all 0.3s ease;
@@ -53,7 +67,7 @@ button {
     color: white;
     width: 140px;
     padding: 12px 18px;
-    font-size: 16px;
+    font-size: var(--text-size);
     font-weight: bold;
     border: none;
     border-radius: 8px;
@@ -74,7 +88,7 @@ button:hover {
     margin: 25px 0 20px;
 }
 #final-data span {
-    font-size: 18px;
+    font-size: var(--text-size);
     border: 1px solid #ddd;
     border-radius: 6px;
     padding: 10px;
@@ -84,14 +98,14 @@ button:hover {
     border-collapse: collapse;
     margin-top: 20px;
     font-family: Arial, sans-serif;
-    font-size: 14px;
+    font-size: var(--text-size);
     color: #333;
 }
 /* Start Table */
 #repos-table th {
     background-color: #f4f4f4;
     color: #333;
-    text-align: left;
+    text-align: center;
     padding: 10px;
     border-bottom: 2px solid #ddd;
 }
@@ -118,17 +132,10 @@ button:hover {
 }
 /* End Table */
 
-@media (max-width: 600px) {
-    #repos-table th, #repos-table td {
-        padding: 8px;
-        font-size: 12px;
-    }
-}
-
-
 .test {
-    font-size: 20px;
+    font-size: var(--text-size);
     color: #333;
+    margin-top: 40px;
 }
 .test .test-list {
     list-style: none;
@@ -171,22 +178,39 @@ button:hover {
     background-color: #0056b3;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 670px) {
     .container {
-        max-width: 90%;
+        width: 80%;
+        padding: 20px;
     }
-
+    
+    .container > img {
+        left: 50%;
+        transform: translate(-50%);
+    }
     button {
-        font-size: 14px;
+        font-size: var(--sm-text-size);
         padding: 10px 15px;
     }
-
-    .get-input {
-        font-size: 14px;
-        padding: 10px;
+    .heading {
+        margin-top: 50px;
+        font-size: 2rem;
     }
-
+    .get-input {
+        font-size: var(--sm-text-size);
+        padding: 10px;
+        width: 100%;
+        text-align: center;
+    }
     .repos-data {
         padding: 15px;
+    }
+    #repos-table th, #repos-table td {
+        padding: 8px;
+        font-size: var(--sm-text-size);
+    }
+    .input-group,
+    .heading {
+        flex-direction: column;
     }
 }
